# flight-scan

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  PLAN.md  README.md  TASKS.md  pyproject.toml
.github/workflows/: release-readiness.yml
data/: destinations.yaml
src/weekend_radar/: __init__.py  config.py  dates.py  db.py  filters.py  main.py  models.py  pipeline.py  scoring.py  telegram.py
src/weekend_radar/providers/: __init__.py  amadeus.py  base.py  mock.py
tests/: test_amadeus_provider.py  test_cli.py  test_config.py  test_dates.py  test_db.py  test_filters.py  test_models.py  test_pipeline.py  test_providers.py  test_scoring.py  test_telegram.py
tests/fixtures/: amadeus_flight_offers.json
