[project]
name = "weekend-radar"
version = "0.1.0"
description = "Weekend Radar project skeleton for cheap weekend flight alerts from Riga."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "pyyaml>=6.0,<7.0",
]

[project.scripts]
weekend-radar = "weekend_radar.main:main"

[dependency-groups]
dev = [
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weekend_radar"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
